# kdd2022-fair-ranking-nsw

./: .flake8  .gitignore  README.md  pyproject.toml
src/real/: func.py  main.py
src/real/conf/: config.yaml
src/real/conf/setting/: default.yaml
src/synthetic/: func.py  main_k.py  main_lam.py  main_n_doc.py  main_noise.py  plots.ipynb
src/synthetic/conf/: config.yaml
src/synthetic/conf/setting/: default.yaml
